# ofx-viewer

./: Cargo.toml  README.md
.github/workflows/: platform-installers.yml
installer/linux/: build-deb.sh
installer/macos/: build-macos.sh
installer/windows/: ofx-viewer.iss
src/: app.rs  main.rs
src/application/: file_loader.rs  mod.rs
src/domain/: account.rs  mod.rs  transaction.rs
src/infrastructure/: formatting.rs  mod.rs
src/presentation/: message.rs  mod.rs  theme.rs
src/presentation/views/: empty_state.rs  header.rs  mod.rs  sidebar.rs  transaction_detail.rs  transaction_table.rs
